# rsblox

./: .gitignore  CONTRIBUTING.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: publish.yml
src/: App.vue  constants.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  roblox_api.rs  types.rs
src-tauri/src/client/: client.rs  mod.rs  validation.rs
src-tauri/src/client/discovery/: mod.rs  request_types.rs
src-tauri/src/client/economy/: mod.rs
src-tauri/src/client/friends/: mod.rs  request_types.rs
src-tauri/src/client/games/: mod.rs  request_types.rs
src-tauri/src/client/presence/: mod.rs  request_types.rs
src-tauri/src/client/search/: mod.rs  request_types.rs
src-tauri/src/client/thumbnails/: mod.rs
src-tauri/src/client/users/: mod.rs  request_types.rs
src-tauri/src/commands/: game_launcher.rs  games.rs  mod.rs  search.rs  thumbnails.rs  users.rs
src-tauri/src/tray/: mod.rs  utils.rs
src/assets/css/: main.scss  splide.css
src/components/: FriendCard.vue  FriendTooltip.vue  GameCard.vue
src/components/GamePage/: GameDescriptionTab.vue  GameServerItem.vue  GameServerTab.vue
src/css/: main.scss  swiper.css
src/lib/: constants.ts  robloxApi.ts  tippy.ts  trayApi.ts  typings.ts
src/pages/: game-page.vue  index.vue  login.vue
src/routes/: +layout.svelte  +page.svelte  HomePage.scss
src/utils/: robloxApi.ts  typings.ts
(+56 files in other folders)
